--- a/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/admin-nav-bar/admin-nav-bar.component.html
@@ -28,7 +28,7 @@
     >
     <a
       class="list-group-item list-group-item-action bg-light"
-      
+      (click)="requests()"
       >Zahtevi za validaciju</a
     >
   </div>
