--- a/FrontEndProjectWeb2/src/app/components/controlor-nav-bar/controlor-nav-bar.component.html
+++ b/FrontEndProjectWeb2/src/app/components/controlor-nav-bar/controlor-nav-bar.component.html
@@ -9,7 +9,7 @@
         >Vazenje karte</a>
         <a
         class="list-group-item list-group-item-action bg-light"
-      
+        (click)="requests()"
         >Zahtevi za validaciju</a
         >
     </div>
