--- a/FrontEndProjectWeb2/src/app/components/employee-profile/employee-profile.component.html
+++ b/FrontEndProjectWeb2/src/app/components/employee-profile/employee-profile.component.html
@@ -1,7 +1,8 @@
-<div class="main">
-  <div class="col-md-8 col-sm-10">
+
+<div class="main" id="mydiv">
+  <div class="col-md-12 col-sm-10">
     <div class="profile-form">
-      <form [formGroup]="profileForm" (ngSubmit)="change()">
+      <form [formGroup]="profileForm" (ngSubmit)="change()" >
         <div class="form-group row">
           <label class="col-sm-4 col-form-label">E-mail adresa</label>
           <div class="col-sm-6">
@@ -72,7 +73,7 @@
             </div>
           </div>
         </div>
-        <button type="submit" [disabled]="!registerForm.valid" class="btn btn-black">
+        <button type="submit" [disabled]="!registerForm.valid" class="btn btn-secondary">
           Izmeni
         </button>
       </form>
